; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/omxil/extr_utils.c_ErrorToString.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/omxil/extr_utils.c_ErrorToString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ErrorToString.psz_names = internal global [38 x i8*] [i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.10, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.11, i32 0, i32 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.12, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.13, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.14, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.15, i32 0, i32 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.16, i32 0, i32 0), i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.17, i32 0, i32 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.18, i32 0, i32 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.19, i32 0, i32 0), i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.20, i32 0, i32 0), i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.21, i32 0, i32 0), i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.22, i32 0, i32 0), i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.23, i32 0, i32 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.24, i32 0, i32 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.25, i32 0, i32 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.26, i32 0, i32 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.27, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.28, i32 0, i32 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.29, i32 0, i32 0), i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.30, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.31, i32 0, i32 0), i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.32, i32 0, i32 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.33, i32 0, i32 0), i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.34, i32 0, i32 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.35, i32 0, i32 0), i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.36, i32 0, i32 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.37, i32 0, i32 0)], align 16
@.str = private unnamed_addr constant [31 x i8] c"OMX_ErrorInsufficientResources\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"OMX_ErrorUndefined\00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c"OMX_ErrorInvalidComponentName\00", align 1
@.str.3 = private unnamed_addr constant [27 x i8] c"OMX_ErrorComponentNotFound\00", align 1
@.str.4 = private unnamed_addr constant [26 x i8] c"OMX_ErrorInvalidComponent\00", align 1
@.str.5 = private unnamed_addr constant [22 x i8] c"OMX_ErrorBadParameter\00", align 1
@.str.6 = private unnamed_addr constant [24 x i8] c"OMX_ErrorNotImplemented\00", align 1
@.str.7 = private unnamed_addr constant [19 x i8] c"OMX_ErrorUnderflow\00", align 1
@.str.8 = private unnamed_addr constant [18 x i8] c"OMX_ErrorOverflow\00", align 1
@.str.9 = private unnamed_addr constant [18 x i8] c"OMX_ErrorHardware\00", align 1
@.str.10 = private unnamed_addr constant [22 x i8] c"OMX_ErrorInvalidState\00", align 1
@.str.11 = private unnamed_addr constant [23 x i8] c"OMX_ErrorStreamCorrupt\00", align 1
@.str.12 = private unnamed_addr constant [28 x i8] c"OMX_ErrorPortsNotCompatible\00", align 1
@.str.13 = private unnamed_addr constant [23 x i8] c"OMX_ErrorResourcesLost\00", align 1
@.str.14 = private unnamed_addr constant [16 x i8] c"OMX_ErrorNoMore\00", align 1
@.str.15 = private unnamed_addr constant [25 x i8] c"OMX_ErrorVersionMismatch\00", align 1
@.str.16 = private unnamed_addr constant [18 x i8] c"OMX_ErrorNotReady\00", align 1
@.str.17 = private unnamed_addr constant [17 x i8] c"OMX_ErrorTimeout\00", align 1
@.str.18 = private unnamed_addr constant [19 x i8] c"OMX_ErrorSameState\00", align 1
@.str.19 = private unnamed_addr constant [28 x i8] c"OMX_ErrorResourcesPreempted\00", align 1
@.str.20 = private unnamed_addr constant [42 x i8] c"OMX_ErrorPortUnresponsiveDuringAllocation\00", align 1
@.str.21 = private unnamed_addr constant [44 x i8] c"OMX_ErrorPortUnresponsiveDuringDeallocation\00", align 1
@.str.22 = private unnamed_addr constant [36 x i8] c"OMX_ErrorPortUnresponsiveDuringStop\00", align 1
@.str.23 = private unnamed_addr constant [34 x i8] c"OMX_ErrorIncorrectStateTransition\00", align 1
@.str.24 = private unnamed_addr constant [33 x i8] c"OMX_ErrorIncorrectStateOperation\00", align 1
@.str.25 = private unnamed_addr constant [28 x i8] c"OMX_ErrorUnsupportedSetting\00", align 1
@.str.26 = private unnamed_addr constant [26 x i8] c"OMX_ErrorUnsupportedIndex\00", align 1
@.str.27 = private unnamed_addr constant [22 x i8] c"OMX_ErrorBadPortIndex\00", align 1
@.str.28 = private unnamed_addr constant [25 x i8] c"OMX_ErrorPortUnpopulated\00", align 1
@.str.29 = private unnamed_addr constant [28 x i8] c"OMX_ErrorComponentSuspended\00", align 1
@.str.30 = private unnamed_addr constant [37 x i8] c"OMX_ErrorDynamicResourcesUnavailable\00", align 1
@.str.31 = private unnamed_addr constant [25 x i8] c"OMX_ErrorMbErrorsInFrame\00", align 1
@.str.32 = private unnamed_addr constant [27 x i8] c"OMX_ErrorFormatNotDetected\00", align 1
@.str.33 = private unnamed_addr constant [31 x i8] c"OMX_ErrorContentPipeOpenFailed\00", align 1
@.str.34 = private unnamed_addr constant [35 x i8] c"OMX_ErrorContentPipeCreationFailed\00", align 1
@.str.35 = private unnamed_addr constant [28 x i8] c"OMX_ErrorSeperateTablesUsed\00", align 1
@.str.36 = private unnamed_addr constant [30 x i8] c"OMX_ErrorTunnelingUnsupported\00", align 1
@.str.37 = private unnamed_addr constant [18 x i8] c"OMX_Error unknown\00", align 1
@OMX_ErrorNone = common dso_local global i64 0, align 8
@.str.38 = private unnamed_addr constant [14 x i8] c"OMX_ErrorNone\00", align 1
@OMX_ErrorInsufficientResources = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ErrorToString(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @OMX_ErrorNone, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.38, i64 0, i64 0), i8** %2, align 8
  br label %21

8:                                                ; preds = %1
  %9 = load i64, i64* @OMX_ErrorInsufficientResources, align 8
  %10 = load i64, i64* %3, align 8
  %11 = sub i64 %10, %9
  store i64 %11, i64* %3, align 8
  %12 = load i64, i64* %3, align 8
  %13 = trunc i64 %12 to i32
  %14 = zext i32 %13 to i64
  %15 = icmp ugt i64 %14, 37
  br i1 %15, label %16, label %17

16:                                               ; preds = %8
  store i64 37, i64* %3, align 8
  br label %17

17:                                               ; preds = %16, %8
  %18 = load i64, i64* %3, align 8
  %19 = getelementptr inbounds [38 x i8*], [38 x i8*]* @ErrorToString.psz_names, i64 0, i64 %18
  %20 = load i8*, i8** %19, align 8
  store i8* %20, i8** %2, align 8
  br label %21

21:                                               ; preds = %17, %7
  %22 = load i8*, i8** %2, align 8
  ret i8* %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
